--- a/CSS/stilo.css
+++ b/CSS/stilo.css
@@ -31,37 +31,35 @@ label{
     left: 10px;
     padding: 60px 70px 50px 10px;
     background-color: azure;
-    width: 500px;
+    width: 75%;
     height: 600px;
     top: 0px;
 }
 
-#col1,
-#col2,
-#col3 {
-    align-items: center;
-    background-color: aquamarine;
+.col {
+    align-content: center;
+    background-color:white;
     border: groove;
     padding: 10px;
-    width: 30%;
+    width: min-content;
     height: 800px;
 }    
 
 .variavel {
     overflow: scroll;
     position: fixed;
-    top: 200px;
+    bottom: 100PX;
     right: 0px;
     padding: 20px 20px 20px 20px;
     background-color: burlywood;
-    width: 300px;
+    width: 25%;
     height: 600px;
 }
 
 .endereco {
     width: 500px;
 }
-
+/*
 .btn {
     border-radius: 90px;
     width: 30px;
@@ -70,6 +68,7 @@ label{
     stroke-width: 900;
     font-size: 40px;
 }
+*/
 #texto {
     background-color: burlywood;
     border-radius: 10px;
