--- a/CSS/stilo.css
+++ b/CSS/stilo.css
@@ -1,4 +1,5 @@
 header {
+    position:relative;
     padding-top: 1em;
     align-content: center;
     text-align:center;
@@ -43,17 +44,19 @@ label{
     padding: 10px;
     width: min-content;
     height: 800px;
-}    
+}
 
 .variavel {
     overflow: scroll;
     position: fixed;
-    bottom: 100PX;
+    bottom: 100px;
+    /*top: 50px;*/
+    max-height: 70%;
     right: 0px;
     padding: 20px 20px 20px 20px;
     background-color: burlywood;
     width: 25%;
-    height: 600px;
+    /*height: 600px;*/
 }
 
 .endereco {
