--- a/CSS/stilo.css
+++ b/CSS/stilo.css
@@ -26,6 +26,7 @@ label{
     display:block;
 }
 
+
 .cardCol {
     vertical-align: super;    
     align-items:start;
@@ -37,41 +38,33 @@ label{
 }
 
 .corpoTexto {
-    /*vertical-align: super;*/
-    /*display: inline-block;*/
-    /*align-items: flex-start;*/
     text-align: start;
     overflow: scroll;
     left: 10px;
     padding: 10px 10px 10px 10px;
-    background-color: azure;
+    background-color: #ffffff;
     width: 75%;
     height: 600px;
-    top: 0px;
+    top: 0;
 }
 
 .col {
-    align-content: center;
-    
-    
+    align-content: end;
     border: groove;
     padding: 10px;
     width: 60%;
     flex-direction: row;
-    
 }
 
 .variavel {
     overflow: scroll;
     position: fixed;
     bottom: 100px;
-    /*top: 50px;*/
     max-height: 70%;
-    right: 0px;
+    right: 0;
     padding: 20px 20px 20px 20px;
     background-color: burlywood;
     width: 25%;
-    /*height: 600px;*/
 }
 
 .endereco {
@@ -131,14 +124,13 @@ btnCop {
 
 footer {
     position: fixed;
-    padding: 5em;
-    height: 5px;
+    height: 20px;
     padding-top: 1em;
     border: 10px solid antiquewhite;
     text-align: right;
     align-items: end;
     align-content: end;
     background-color: powderblue;
-    bottom: 0px;
-    right: 0px;
+    bottom: 0;
+    right: 0;
 }
